crates/engine/tests/compile-fail/handler_non_system_param_extra.stderr
error[E0277]: the trait bound `u32: SystemParam` is not satisfied
  --> tests/compile-fail/handler_non_system_param_extra.rs:15:1
   |
15 | #[galeon_engine::handler]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SystemParam` is not implemented for `u32`
   |
   = help: the following other types implement trait `SystemParam`:
             ()
             (P0, P1)
             (P0, P1, P2)
             (P0, P1, P2, P3)
             (P0, P1, P2, P3, P4)
             (P0, P1, P2, P3, P4, P5)
             (P0, P1, P2, P3, P4, P5, P6)
             (P0, P1, P2, P3, P4, P5, P6, P7)
           and $N others
   = note: required for `fn(MyRequest, u32) -> Result<MyResponse, std::string::String> {bad_handler}` to implement `IntoHandler<MyRequest, MyResponse, (u32,)>`
note: required by a bound in `_assert_into_handler`
  --> tests/compile-fail/handler_non_system_param_extra.rs:15:1
   |
15 | #[galeon_engine::handler]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `_assert_into_handler`
   = note: this error originates in the attribute macro `galeon_engine::handler` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `cmd`
  --> tests/compile-fail/handler_non_system_param_extra.rs:16:20
   |
16 | pub fn bad_handler(cmd: MyRequest, _factor: u32) -> Result<MyResponse, String> {
   |                    ^^^ help: if this is intentional, prefix it with an underscore: `_cmd`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
